--- a/mdepx.conf
+++ b/mdepx.conf
@@ -1,7 +1,7 @@
 modules mdepx;
 modules src;
 
-link ldscript obj/rpi-pico.elf;
+link ldscript obj/raspberrypi-pico.elf;
 
 set-build-flags	-mthumb -mcpu=cortex-m0plus -fno-pic
 		-O -nostdlib -fno-builtin-printf
