--- a/mdepx.conf
+++ b/mdepx.conf
@@ -20,7 +20,10 @@ src {
 			../mdepx/include
 			../mdepx/lib
 			../mdepx;
-	objects board.o main.o startup.o bs2_default_padded_checksummed.o;
+	objects board.o
+		bs2_default_padded_checksummed.o
+		main.o
+		startup.o;
 };
 
 mdepx {
