disable SMP for now

--- a/mdepx.conf
+++ b/mdepx.conf
@@ -22,8 +22,7 @@ src {
 			../mdepx;
 	objects board.o
 		bs2_default_padded_checksummed.o
-		main.o
-		startup.o;
+		main.o;
 };
 
 mdepx {
@@ -75,16 +74,8 @@ mdepx {
 			options fl fl_wrapper;
 		};
 
-		cpu {
-			max 2;
-		};
-
 		systm {
 			options console;
-		};
-
-		sched {
-			options smp;
 		};
 	};
 
