Add cyw43 stubs.

--- a/mdepx.conf
+++ b/mdepx.conf
@@ -16,12 +16,18 @@ set-build-flags	-mthumb -mcpu=cortex-m0plus -fno-pic
 
 src {
 	append-search-path
+			.
 			../mdepx/arch
 			../mdepx/include
 			../mdepx/lib
 			../mdepx;
+
+	append-search-path ../mdepx/lib/cyw43-driver/src;
+
 	objects board.o
 		bs2_default_padded_checksummed.o
+		cyw43.o
+		cyw43_firmware.o
 		main.o;
 };
 
@@ -82,6 +88,16 @@ mdepx {
 	lib {
 		modules libaeabi;
 		modules libc;
+		modules cyw43-driver;
+
+		libc {
+			objects gen/assert.o;
+		};
+
+		cyw43-driver {
+			append-search-path src .;
+			append-search-path ../../../src;
+		};
 
 		libc {
 			modules stdio string stdlib;
